--- a/style.css
+++ b/style.css
@@ -1,3 +1,61 @@
-#root {
-  color: red;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #605e5e;
+  background-image: url("");
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #605e5e;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.episode-item {
+  list-style: none;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #fff;
+  text-align: center;
+}
+
+.episode-title {
+  background-color: rgb(172, 171, 170);
+  font-size: 1.2em;
+  margin: 10px;
+  color: #100f0f;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.episode-image {
+  max-width: 100%;
+  height: auto;
+  border-bottom: 1px solid #ccc;
+  display: block;
+  margin: 0 auto;
+}
+
+.episode-summary {
+  padding: 10px;
+  color: #666;
+  margin: 10px;
+  text-align: left;
+}
+
+.source-link {
+  color: #666666;
+  margin: 10px;
+  text-align: left;
 }
